log
Sun, Mar 16, 2025 10:28:25 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sun, Mar 16, 2025 10:30:26 AM: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:38: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
       L = (List *) realloc(L, sizeof(List) * i) ;
                                      ^~~~
Compilation failed
20110d8
Sun, Mar 16, 2025 10:36:57 AM: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:38: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
       L = (List *) realloc(L, sizeof(List) * i) ;
                                      ^~~~
Compilation failed
823d631
Sun, Mar 16, 2025 10:37:09 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6da1f5b
Sun, Mar 16, 2025 10:54:21 AM: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before '}' token
    }
    ^
Compilation failed
acd190e
Sun, Mar 16, 2025 10:54:35 AM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
f3c6248
Sun, Mar 16, 2025 11:01:54 AM: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:16: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       suma += L->data[i] ;
                ^~
Compilation failed
4b4164b
Sun, Mar 16, 2025 11:10:36 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:16: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       suma += (*L)->data[i]
                ^~
exercises.c:65:4: error: expected ';' before '}' token
    }
    ^
Compilation failed
ad91dca
Sun, Mar 16, 2025 11:14:32 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
db2783e
Sun, Mar 16, 2025 11:16:01 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:8: error: unused variable 'tamano' [-Werror=unused-variable]
    int tamano = get_size(L) ;
        ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
66491ed
Sun, Mar 16, 2025 11:16:16 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
12d29ed
Sun, Mar 16, 2025 11:20:56 AM: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:18: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       suma += *(L->data[i]) ;
                  ^~
Compilation failed
15d56ee
Sun, Mar 16, 2025 11:34:18 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:18: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       suma += *(L->data[i]) ;
                  ^~
Compilation failed
4710627
Sun, Mar 16, 2025 11:36:40 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
bf5bb5d
Sun, Mar 16, 2025 11:39:42 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:65:21: error: dereferencing 'void *' pointer [-Werror]
       suma += (int) *hola ;
                     ^~~~~
exercises.c:65:7: error: invalid use of void expression
       suma += (int) *hola ;
       ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9c26b56
